/* SPDX-License-Identifier: GPL-3.0+ */
/*
 *  This file is part of aasdk library project.
 *  Copyright (C) 2018 f1x.studio (Michal Szwaj)
 */

syntax = "proto2";

message DrivingStatusNumber {
  enum Enum {
    UNRESTRICTED = 0;
    NO_VIDEO = 1;
    NO_KEYBOARD_INPUT = 2;
    NO_VOICE_INPUT = 4;
    NO_CONFIG = 8;
    LIMIT_MESSAGE_LEN = 16;
    FULLY_RESTRICTED = 31;
  }
}
